clang/test/BSC/Negative/Trait/GenericTrait/impl_trait3/impl_trait3.cbs
// RUN: %clang_cc1 -fsyntax-only -verify %s

_Trait F<T> {
  T foo(This* this);
};

int int::foo(int* this) {
  return 10;
}

_Impl _Trait F<S> for int; // expected-error {{use of undeclared identifier 'S'}}